--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ body {
   height: 250px;
   width: 250px;
   margin: 17px auto;
-  background: url(../img/favicon.png);
+  background: url(../img/favicon.jpg);
 }
 
 i.service-icon {
