--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,7 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background: url(../img/bg.webp) no-repeat center center fixed;
+  background: url(../img/bg.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -149,7 +149,7 @@ body {
   height: 250px;
   width: 250px;
   margin: 17px auto;
-  background: url(../img/favicon-en.webp);
+  background: url(../img/favicon-en.jpg);
 }
 
 .pixelSeven {
@@ -157,7 +157,7 @@ body {
   height: 250px;
   width: 250px;
   margin: 17px auto;
-  background: url(../img/favicon-cn.webp);
+  background: url(../img/favicon-cn.jpg);
 }
 
 i.service-icon {
@@ -179,7 +179,7 @@ i.service-icon {
   display: table;
   height: 400px;
   width: 100%;
-  background: url(../img/callout.webp) no-repeat center center fixed;
+  background: url(../img/callout.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -268,11 +268,11 @@ i.scroll:hover {
 @media (max-width: 768px) {
 	
   .header {
-	background: url(../img/bg.webp) no-repeat center center scroll; 
+	background: url(../img/bg.jpg) no-repeat center center scroll; 
   }
 
   .callout {
-	background: url(../img/callout.webp) no-repeat center center scroll; 
+	background: url(../img/callout.jpg) no-repeat center center scroll; 
   }
 
   .map {
